--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Asterian | SHIB Price</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
     <div class="root">
-        <div v-if="lastTrade">
-            <h1>Price</h1>
+        <div class="tradePrice" v-if="lastTrade">
+            <h1 :style="{ fontSize:fontSize/4.5+'px' }"><a href="https://www.shibatoken.com/">SHIB</a> | USDT</h1>
             <p :style="{ color:priceColor, fontSize:fontSize+'px' }">{{ lastTrade[0].price }}</p>
             <!-- <h2>Balance</h2>
             <p>{{ shibBalance }} SHIB</p>
