--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asterian | SHIB Price</title>
     <link rel="stylesheet" href="./index.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 </head>
 
 <body>
     <div class="root">
         <div class="tradePrice" v-if="connection">
-            <h1 :style="{ fontSize:fontSize/4.5+'px' }"><a href="https://www.shibatoken.com/" target="_blank">SHIB</a> |
-                USDT</h1>
-            <p :style="{ color:priceColor, fontSize:fontSize+'px' }">{{ currentPrice }}</p>
+            <img class="shiba" src="https://s2.coinmarketcap.com/static/img/coins/64x64/5994.png" alt="SHIBA INU">
+            <h1><a href="https://www.shibatoken.com/" target="_blank">SHIB</a> |USDT<span class="binance"
+                    @click="gotobinance"><img class="bsc" src="https://bscscan.com/images/svg/brands/bnb.svg?v=1.3"
+                        alt="BINANCE">BINANCE</span>
+            </h1>
+            <p :style="{ color:priceColor }">{{ currentPrice || 'Loading' }}</p>
             <!-- <h2>Balance</h2>
             <p>{{ shibBalance }} SHIB</p>
             <p>~ {{ lastTrade[0].price * shibBalance }} USD</p> -->
         </div>
     </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
 <script src="./index.js"></script>
 
